wip: Monday evening, starting to validate & create new accounts
