# modules/accounts/model.ts
@@ -9,7 +9,7 @@ export interface Account {
   currencyCode: string,
   balanceTotal: number,
   // balanceFractional?: number | undefined,
-  visibility: keyof typeof AccountVisibility,
+  visibility: AccountVisibility,
 }
 
 export interface AccountItem extends Account {
@@ -20,26 +20,23 @@ export interface AccountItem extends Account {
   deletedAt?: Date,
 }
 
-export const AccountVisibility = {
-  0: 'PUBLIC',
-  1: 'UNLISTED',
-  2: 'PRIVATE',
+export enum AccountVisibility {
+  'PRIVATE' = 0,
+  'UNLISTED' = 1,
+  'PUBLIC' = 2,
 };
 
 export async function getAccountById(tenantId: number, id: number, { session }: {
   session?: MysqlSession | undefined,
 } = {}): Promise<AccountItem | undefined> {
-  const selectQuery = sql.select().from('Account').where({ tenantId, id });
+  const selectQuery = sql.select().from('Account').where('tenantId = ? AND id = ?', tenantId, id);
   return (await mysqlQuery<AccountItem>(selectQuery, session)).first();
 }
 
-export async function findAccounts(tenantId: number, { columns, session }: {
-  columns?: (keyof AccountItem)[],
+export async function findAccounts(tenantId: number, { session }: {
   session?: MysqlSession | undefined,
 } = {}): Promise<AccountItem[]> {
-  const selectQuery = sql.select(Array.isArray(columns) && columns.length ? columns : [])
-    .from('Account')
-    .where({ tenantId });
+  const selectQuery = sql.select().from('Account').where('tenantId = ?', tenantId);
   const { rows } = await mysqlQuery<AccountItem>(selectQuery, session);
   return rows;
 }
@@ -47,7 +44,7 @@ export async function findAccounts(tenantId: number, { columns, session }: {
 export async function findAccountsById(ids: number[], { session }: {
   session?: MysqlSession | undefined,
 } = {}): Promise<AccountItem[]> {
-  const selectQuery = sql.select().from('Account').where(sql.in('id', ids));
+  const selectQuery = sql.select().from('Account').where('id IN ?', ids);
   const { rows } = await mysqlQuery<AccountItem>(selectQuery, session);
   return rows;
 }
@@ -55,23 +52,23 @@ export async function findAccountsById(ids: number[], { session }: {
 export async function createAccount(tenantId: number, create: Account, { session }: {
   session?: MysqlSession | undefined,
 } = {}): Promise<number> {
-  const insertQuery = sql.insert().into('Account').values([{ tenantId, ...create }]);
+  const insertQuery = sql.insert().into('Account').setFields({ tenantId, ...create });
   const { insertId } = await mysqlQuery(insertQuery, session);
   return insertId;
 }
 
-export async function updateAccountById(id: number, update: Partial<Account>, { session }: {
+export async function updateAccountById(tenantId: number, id: number, update: Partial<Account>, { session }: {
   session?: MysqlSession | undefined,
 } = {}): Promise<boolean> {
-  const updateQuery = sql.update('Account').values(update).where('id', id);
+  const updateQuery = sql.update().table('Account').setFields(update).where('tenantId = ? AND id = ?', tenantId, id);
   const { affectedRows } = await mysqlQuery(updateQuery, session);
   return affectedRows === 1;
 }
 
-export async function deleteAccountById(id: number, { session }: {
+export async function deleteAccountById(tenantId: number, id: number, { session }: {
   session?: MysqlSession | undefined,
 } = {}): Promise<boolean> {
-  const deleteQuery = sql.delete('Account').where('id', id);
+  const deleteQuery = sql.delete().from('Account').where('tenantId = ? AND id = ?', tenantId, id);
   const { affectedRows } = await mysqlQuery(deleteQuery, session);
   return affectedRows === 1;
 }
